// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSummaryInfo icon should not render with the not given "icon" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo icon should render with the given "icon" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <div>
    <svg
      class="ec-icon ec-summary-info__icon tw-mr-12"
      data-test="ec-summary-info__icon"
      height="12"
      width="12"
    >
      <use
        xlink:href="#ec-simple-sell"
      />
    </svg>
  </div>
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo lineItems should render with the given "lineItems" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
    <div
      class="ec-summary-info__content-lines"
      data-test="ec-summary-info__content-lines"
    >
      
      <div
        class="tw-text-gray-4 tw-uppercase ec-summary-info__content-line-item"
      >
        <span
          class=""
        >
          Some text
        </span>
        <span
          class="tw-ml-4"
          data-ec-tooltip-mock-content="Some tooltip text"
          data-test="ec-mock ec-tooltip-mock"
        >
          <svg
            class="ec-icon ec-summary-info__content-line-item-icon tw-h-16"
            height="14"
            width="14"
          >
            <use
              xlink:href="#ec-simple-info"
            />
          </svg>
        </span>
      </div>
      <div
        class="ec-summary-info__content-line-item"
      >
        <span
          class=""
        >
          Another text
        </span>
        <!--v-if-->
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`EcSummaryInfo lineItems should render with the not given "lineItems" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo slots should render with the default slot given 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <div
      class="ec-summary-info__title"
      data-test="ec-summary-info__title"
    >
      The title
    </div>
    <div
      class="ec-summary-info__content-lines"
      data-test="ec-summary-info__content-lines"
    >
      
      
      
      <div
        data-test="default-slot"
      >
        <span>
           Some text from a slot 
        </span>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`EcSummaryInfo title should not render with not given "title" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcSummaryInfo title should render with the given "title" prop 1`] = `
<div
  class="ec-summary-info"
  data-test="ec-summary-info"
>
  <!--v-if-->
  <div
    class="ec-summary-info__content"
  >
    <div
      class="ec-summary-info__title"
      data-test="ec-summary-info__title"
    >
      Default title
    </div>
    <!--v-if-->
  </div>
</div>
`;
